cmake_minimum_required(VERSION 3.9)
project(v0_2)

set(CMAKE_CXX_STANDARD 11)

add_executable(v0_2
        PirmasDarbas/deque.cpp
        PirmasDarbas/generavimas.cpp
        PirmasDarbas/list.cpp
        PirmasDarbas/main.cpp
        PirmasDarbas/studentai.h
        PirmasDarbas/vector.cpp
        main.cpp
        Mokinys.cpp
        Mokinys.h
        stdafx.cpp
        stdafx.h
        Vector.h)
